[package]
authors = ["David Flemström <david.flemstrom@gmail.com>"]
build = "build.rs"
categories = ["command-line-interface", "command-line-utilities", "development-tools", "text-processing", "value-formatting"]
description = "A tool for doing record analysis and transformation"
documentation = "https://github.com/dflemstr/rq/blob/master/README.md"
homepage = "https://github.com/dflemstr/rq"
keywords = ["command-line-tool", "cli", "javascript", "record", "query"]
license = "Apache-2.0"
name = "record-query"
readme = "README.md"
repository = "https://github.com/dflemstr/rq"
version = "0.10.4"
edition = "2018"

[badges]

[badges.travis-ci]
branch = "master"
repository = "dflemstr/rq"

[build-dependencies]
built = "0.3"
env_logger = "0.7"
regex = "1.3"

[dependencies]
ansi_term = "0.12"
csv = "1.1"
dtoa = "0.4"
env_logger = "0.7"
failure = "0.1"
glob = "0.3"
itoa = "0.4"
log = "0.4"
nix = "0.15"
ordered-float = "1.0"
pest = "2.1"
protobuf = "2.8"
rmp = "0.8"
rmpv = "0.4"
serde = "1.0"
serde-hjson = "0.9"
serde-protobuf = "0.8"
serde_cbor = "0.10"
serde_json = "1.0"
serde_yaml = "0.8"
structopt = "0.3"
toml = "0.5"
xdg-basedir = "1.0"
yaml-rust = "0.4"

[dependencies.v8]
version = "0.10.0"
optional = true

[dependencies.avro-rs]
version = "0.6"
features = ["snappy"]

[features]
default = ["js"]
js = ["v8"]

[profile]

[profile.release]
lto = true
codegen-units = 1
