[package]
authors = ["David Flemström <david.flemstrom@gmail.com>"]
categories = ["command-line-interface", "command-line-utilities", "development-tools", "text-processing", "value-formatting"]
description = "A tool for doing record analysis and transformation"
documentation = "https://github.com/dflemstr/rq/blob/master/README.md"
homepage = "https://github.com/dflemstr/rq"
keywords = ["command-line-tool", "cli", "javascript", "record", "query"]
license = "Apache-2.0"
name = "record-query"
readme = "README.md"
repository = "https://github.com/dflemstr/rq"
version = "1.0.3-alpha.0"
edition = "2018"

[badges]

[badges.travis-ci]
branch = "master"
repository = "dflemstr/rq"

[build-dependencies]
built = "0.3.2"
env_logger = "0.7.1"
regex = "1.3.1"
vergen = "3.0.4"

[dependencies]
ansi_term = "0.12.1"
atty = "0.2.13"
csv = "1.1.1"
directories = "2.0.2"
dtoa = "0.4.4"
env_logger = "0.7.1"
failure = "0.1.6"
glob = "0.3.0"
itoa = "0.4.4"
log = "0.4.8"
nix = "0.15.0"
ordered-float = "1.0.2"
pest = "2.1.2"
protobuf = "2.8.1"
rmp = "0.8.8"
rmpv = "0.4.2"
serde = "1.0.102"
serde-hjson = "0.9.1"
serde-protobuf = "0.8.1"
serde_cbor = "0.10.2"
serde_json = "1.0.41"
serde_yaml = "0.8.11"
structopt = "0.3.4"
toml = "0.5.5"
yaml-rust = "0.4.3"

[dependencies.avro-rs]
version = "0.6.5"
features = ["snappy"]

[profile.release]
lto = true
codegen-units = 1
