[package]
authors = ["David Flemström <david.flemstrom@gmail.com>"]
build = "build.rs"
description = "Support for Apache Avro in combination with serde"
documentation = "https://docs.rs/serde-avro"
homepage = "https://github.com/dflemstr/rq/tree/master/serde-avro"
include = ["build.rs", "src/**/*", "tests/**/*", "testdata/**/*", "Cargo.toml"]
keywords = ["serde", "avro", "apache"]
license = "Apache-2.0"
name = "serde-avro"
repository = "https://github.com/dflemstr/rq/tree/master/serde-avro"
version = "0.4.0"

[dependencies]
byteorder = "1.0.0"
crc = "1.3.0"
error-chain = "0.9.0"
flate2 = "0.2.14"
lazy_static = "0.2.1"
linked-hash-map = "0.4.0"
log = "0.3.6"
serde = "0.9.7"
serde_derive = "0.9.7"
serde_json = "0.9.6"
snap = "0.2.1"

[dev-dependencies]
serde-value = "0.4.0"
