[package]
authors = ["David Flemström <david.flemstrom@gmail.com>"]
description = "Support for Google Protocol Buffers in combination with serde"
documentation = "http://dflemstr.github.io/rq/serde-protobuf/"
homepage = "https://github.com/dflemstr/rq/tree/master/serde-protobuf"
include = ["src/**/*", "tests/**/*", "testdata/**/*", "Cargo.toml"]
keywords = ["serde", "protocol", "buffers", "protobuf", "google"]
license = "Apache-2.0"
name = "serde-protobuf"
repository = "https://github.com/dflemstr/rq/tree/master/serde-protobuf"
version = "0.2.0"

[dependencies]
linked-hash-map = "*"
log = "*"
protobuf = "*"
serde = "*"

[dev-dependencies.serde-value]
git = "https://github.com/dflemstr/serde-value.git"
