[package]
authors = ["David Flemström <david.flemstrom@gmail.com>"]
description = "Support for Google Protocol Buffers in combination with serde"
documentation = "http://dflemstr.github.io/rq/serde-protobuf/"
homepage = "https://github.com/dflemstr/rq/tree/master/serde-protobuf"
include = ["src/**/*", "tests/**/*", "testdata/**/*", "Cargo.toml"]
keywords = ["serde", "protocol", "buffers", "protobuf", "google"]
license = "Apache-2.0"
name = "serde-protobuf"
repository = "https://github.com/dflemstr/rq/tree/master/serde-protobuf"
version = "0.5.0"

[dependencies]
error-chain = "0.9.0"
linked-hash-map = "0.4.0"
log = "0.3.6"
protobuf = "1.2.1"
serde = "1.0.2"

[dev-dependencies]
serde-value = "0.5.0"
