[package]
authors = ["David Flemström <david.flemstrom@gmail.com>"]
description = "Support for Google Protocol Buffers in combination with serde"
homepage = "https://github.com/dflemstr/rq/tree/master/serde_protobuf"
include = ["src/**/*", "tests/**/*", "testdata/**/*", "Cargo.toml"]
keywords = ["serde", "protocol", "buffers", "protobuf", "google"]
license = "Apache-2.0"
name = "serde_protobuf"
repository = "https://github.com/dflemstr/rq/tree/master/serde_protobuf"
version = "0.1.0"

[dependencies]
linked-hash-map = "0.0.10"
log = "0.3.6"
protobuf = "1.0.20"
serde = "0.7.5"

[dev-dependencies]
serde-value = "0.2.1"
